--- a/index.html
+++ b/index.html
@@ -1,90 +1,120 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Formulário de convite</title>
 
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulário de convite</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Leckerli+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/index.css" />
+  </head>
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Leckerli+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="styles/index.css">
-</head>
-
-<body>
-  <div id="app">
-    <aside>
-      <div class="aside-container">
-        <div>
-          <img src="assets/Logo.svg" alt="imagem da logo">
-          <h1>Festivite</h1>
-          <p>Crie um convite digital para o seu evento</p>
+  <body>
+    <div id="app">
+      <aside>
+        <div class="aside-container">
+          <div>
+            <img src="assets/Logo.svg" alt="imagem da logo" />
+            <h1>Festivite</h1>
+            <p>Crie um convite digital para o seu evento</p>
+          </div>
         </div>
-      </div>
-    </aside>
-    <main>
-      <div class="main-container">
-        <h1>Crie seu convite</h1>
+      </aside>
+      <main>
+        <div class="main-container">
+          <h1>Crie seu convite</h1>
 
-        <div class="about">
-          <img src="assets/icons/calendar.svg" alt="ícone de calendário">
-          <h2>Sobre o evento</h2>
+          <div class="about">
+            <img src="assets/icons/calendar.svg" alt="ícone de calendário" />
+            <h2>Sobre o evento</h2>
+          </div>
+
+          <form method="post" enctype="multipart/form-data">
+            <fieldset id="about-event">
+              <div class="input-wrapper">
+                <label for="name-event">Titulo</label>
+                <input
+                  type="text"
+                  id="name-event"
+                  name="name-event"
+                  placeholder="Nome do evento"
+                />
+              </div>
+
+              <div class="input-grid">
+                <div class="input-wrapper">
+                  <label for="initial-date">Início</label>
+                  <input
+                    type="date"
+                    id="initial-date"
+                    name="initial-date"
+                    lang="pt-BR"
+                  />
+                </div>
+
+                <div class="input-wrapper">
+                  <label for="final-date">Fim</label>
+                  <input
+                    type="date"
+                    id="final-date"
+                    name="final-date"
+                    lang="pt-BR"
+                  />
+                </div>
+              </div>
+
+              <div class="input-grid">
+                <div class="radio-wrapper">
+                  <label for="modality">Tipo</label>
+
+                  <div class="flex">
+                    <div class="radio-btn"> 
+                      <img
+                        src="assets/icons/building-2.svg"
+                        alt="ícone de um prédio"
+                      />
+                      <button>Presencial</button>
+                    </div>
+                    <div class="radio-btn">
+                      <img
+                        src="assets/icons/video.svg"
+                        alt="ícone de um prédio"
+                      />
+                      <button>Online</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="input-wrapper">
+                  <label for="locale">Local</label>
+                  <input
+                    type="url"
+                    id="locale"
+                    name="locale"
+                    placeholder="Link ou endereço"
+                  />
+                </div>
+              </div>
+
+              <div class="textarea-wrapper">
+                <label for="description">Descrição</label>
+                <textarea
+                  name="description"
+                  id="description"
+                  cols="30"
+                  rows="10"
+                  placeholder="Escreva sobre os detalhes do evento"
+                ></textarea>
+              </div>
+            </fieldset>
+          </form>
         </div>
-
-        <form method="post" enctype="multipart/form-data">
-          <fieldset id="about-event">
-
-            <div class="input-wrapper">
-              <label for="name-event">Titulo</label>
-              <input type="text" id="name-event" name="name-event" placeholder="Nome do evento">
-            </div>
-
-            <div class="input-grid">
-              <div class="input-wrapper">
-                <label for="initial-date">Início</label>
-                <input type="date" id="initial-date" name="initial-date" lang="pt-BR">
-              </div>
-
-              <div class="input-wrapper">
-                <label for="final-date">Fim</label>
-                <input type="date" id="final-date" name="final-date" lang="pt-BR">
-              </div>
-            </div>
-
-            <div class="input-grid">
-              <div class="radio-wrapper">
-                <label for="modality">Tipo</label>
-                <div class="input-grid">
-                  <input type="radio" name="modality" id="modality">
-                  <img src="assets/icons/building-2.svg" alt="ícone de um prédio">
-                  <span>Presencial</span>
-                </div>
-                <div class="input-grid">
-                  <input type="" name="modality" id="modality">
-                  <img src="assets/icons/video.svg" alt="ícone de um prédio">
-                  <span>Online</span>
-                </div>
-              </div>
-  
-              <div class="input-wrapper">
-                <label for="locale">Local</label>
-                <input type="url" id="locale" name="locale" placeholder="Link ou endereço">
-              </div>
-            </div>
-
-            <div class="textarea-wrapper">
-              <label for="description">Descrição</label>
-              <textarea name="description" id="description" cols="30" rows="10"
-                placeholder="Escreva sobre os detalhes do evento"></textarea>
-            </div>
-          </fieldset>
-        </form>
-      </div>
-    </main>
-  </div>
-</body>
-
+      </main>
+    </div>
+  </body>
 </html>
