--- a/index.html
+++ b/index.html
@@ -112,6 +112,76 @@
                 ></textarea>
               </div>
             </fieldset>
+
+            <div class="about">
+              <img src="assets/icons/paintbrush-vertical.svg" alt="ícone de calendário" />
+              <h2>Personalização</h2>
+            </div>
+
+            <fieldset class="enroll-options">
+              <legend>Cor principal</legend>
+
+              <div class="input-wrapper">
+                <label></label>
+
+                <div class="radio-container">
+                  <div class="radio-inner">
+                    <div class="radio-img"></div>
+                    <input type="radio" name="color" value="blue" id="color">
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-img"></div>
+                    <input type="radio" name="color" value="navy" id="color">
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-img"></div>
+                    <input type="radio" name="color" value="purple" id="color">
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-img"></div>
+                    <input type="radio" name="color" value="fuschia" id="color">
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-img"></div>
+                    <input type="radio" name="color" value="pink" id="color">
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-img"></div>
+                    <input type="radio" name="color" value="danger" id="color">
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-img"></div>
+                    <input type="radio" name="color" value="orange" id="color">
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-img"></div>
+                    <input type="radio" name="color" value="yellow" id="color">
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-img"></div>
+                    <input type="radio" name="color" value="time" id="color">
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-img"></div>
+                    <input type="radio" name="color" value="green" id="color">
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-img"></div>
+                    <input type="radio" name="color" value="cyan" id="color">
+                  </div>
+                </div>
+              </div>
+            </fieldset>
           </form>
         </div>
       </main>
