--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <label for="modality">Tipo</label>
 
                   <div class="flex">
-                    <div class="radio-btn"> 
+                    <div class="radio-btn">
                       <img
                         src="assets/icons/building-2.svg"
                         alt="ícone de um prédio"
@@ -113,75 +113,32 @@
               </div>
             </fieldset>
 
-            <div class="about">
-              <img src="assets/icons/paintbrush-vertical.svg" alt="ícone de calendário" />
-              <h2>Personalização</h2>
-            </div>
-
-            <fieldset class="enroll-options">
-              <legend>Cor principal</legend>
-
-              <div class="input-wrapper">
-                <label></label>
-
-                <div class="radio-container">
-                  <div class="radio-inner">
-                    <div class="radio-img"></div>
-                    <input type="radio" name="color" value="blue" id="color">
-                  </div>
-
-                  <div class="radio-inner">
-                    <div class="radio-img"></div>
-                    <input type="radio" name="color" value="navy" id="color">
-                  </div>
-
-                  <div class="radio-inner">
-                    <div class="radio-img"></div>
-                    <input type="radio" name="color" value="purple" id="color">
-                  </div>
-
-                  <div class="radio-inner">
-                    <div class="radio-img"></div>
-                    <input type="radio" name="color" value="fuschia" id="color">
-                  </div>
-
-                  <div class="radio-inner">
-                    <div class="radio-img"></div>
-                    <input type="radio" name="color" value="pink" id="color">
-                  </div>
-
-                  <div class="radio-inner">
-                    <div class="radio-img"></div>
-                    <input type="radio" name="color" value="danger" id="color">
-                  </div>
-
-                  <div class="radio-inner">
-                    <div class="radio-img"></div>
-                    <input type="radio" name="color" value="orange" id="color">
-                  </div>
-
-                  <div class="radio-inner">
-                    <div class="radio-img"></div>
-                    <input type="radio" name="color" value="yellow" id="color">
-                  </div>
-
-                  <div class="radio-inner">
-                    <div class="radio-img"></div>
-                    <input type="radio" name="color" value="time" id="color">
-                  </div>
-
-                  <div class="radio-inner">
-                    <div class="radio-img"></div>
-                    <input type="radio" name="color" value="green" id="color">
-                  </div>
-
-                  <div class="radio-inner">
-                    <div class="radio-img"></div>
-                    <input type="radio" name="color" value="cyan" id="color">
-                  </div>
-                </div>
+            <div class="custom-container">
+              <div class="about">
+                <img
+                  src="assets/icons/paintbrush-vertical.svg"
+                  alt="ícone de calendário"
+                />
+                <h2>Personalização</h2>
               </div>
-            </fieldset>
+
+              <fieldset class="enroll-options">
+                <legend>Cor principal</legend>
+
+                <div class="color-selection">
+                  <div class="color-swatch light-blue"></div>
+                  <div class="color-swatch purple"></div>
+                  <div class="color-swatch pink"></div>
+                  <div class="color-swatch red selected"></div>
+                  <div class="color-swatch orange"></div>
+                  <div class="color-swatch yellow-orange"></div>
+                  <div class="color-swatch yellow"></div>
+                  <div class="color-swatch light-yellow-green"></div>
+                  <div class="color-swatch green"></div>
+                  <div class="color-swatch cyan"></div>
+                </div>
+              </fieldset>
+            </div>
           </form>
         </div>
       </main>
