section color with radio input

--- a/index.html
+++ b/index.html
@@ -126,16 +126,50 @@
                 <legend>Cor principal</legend>
 
                 <div class="color-selection">
-                  <div class="color-swatch light-blue"></div>
-                  <div class="color-swatch purple"></div>
-                  <div class="color-swatch pink"></div>
-                  <div class="color-swatch red selected"></div>
-                  <div class="color-swatch orange"></div>
-                  <div class="color-swatch yellow-orange"></div>
-                  <div class="color-swatch yellow"></div>
-                  <div class="color-swatch light-yellow-green"></div>
-                  <div class="color-swatch green"></div>
-                  <div class="color-swatch cyan"></div>
+                  <label>
+                    <input type="radio" name="color" value="light-blue" />
+                    <div class="color-swatch light-blue"></div>
+                  </label>
+                  <label>
+                    <input type="radio" name="color" value="purple" />
+                    <div class="color-swatch purple"></div>
+                  </label>
+                  <label>
+                    <input type="radio" name="color" value="pink" />
+                    <div class="color-swatch pink"></div>
+                  </label>
+                  <label>
+                    <input type="radio" name="color" value="red" checked />
+                    <div class="color-swatch red"></div>
+                  </label>
+                  <label>
+                    <input type="radio" name="color" value="orange" />
+                    <div class="color-swatch orange"></div>
+                  </label>
+                  <label>
+                    <input type="radio" name="color" value="yellow-orange" />
+                    <div class="color-swatch yellow-orange"></div>
+                  </label>
+                  <label>
+                    <input type="radio" name="color" value="yellow" />
+                    <div class="color-swatch yellow"></div>
+                  </label>
+                  <label>
+                    <input
+                      type="radio"
+                      name="color"
+                      value="light-yellow-green"
+                    />
+                    <div class="color-swatch light-yellow-green"></div>
+                  </label>
+                  <label>
+                    <input type="radio" name="color" value="green" />
+                    <div class="color-swatch green"></div>
+                  </label>
+                  <label>
+                    <input type="radio" name="color" value="cyan" />
+                    <div class="color-swatch cyan"></div>
+                  </label>
                 </div>
               </fieldset>
             </div>
