--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <h2>Personalização</h2>
               </div>
 
-              <fieldset class="enroll-options">
+              <fieldset>
                 <legend>Cor principal</legend>
 
                 <div class="color-selection">
@@ -173,6 +173,156 @@
                 </div>
               </fieldset>
             </div>
+
+            <fieldset class="enroll-options">
+              <div class="input-wrapper">
+                <label for="theme">Tema do evento</label>
+
+                <div class="radio-container">
+                  <label>
+                    <input type="radio" name="theme" value="birthday" />
+                    <div class="radio-inner">
+                      <img
+                        src="assets/theme-image/Image.svg"
+                        alt="imagem de Aniversário"
+                      />
+                      <span>Aniversário</span>
+                    </div>
+                  </label>
+
+                  <label>
+                    <input type="radio" name="theme" id="juvenile" />
+                    <div class="radio-inner">
+                      <img
+                        src="assets/theme-image/Image-1.svg"
+                        alt="imagem de infantil"
+                      />
+                      <span>Infantil</span>
+                    </div>
+                  </label>
+
+                  <label>
+                    <input type="radio" name="theme" value="graduation" />
+                    <div class="radio-inner">
+                      <img
+                        src="assets/theme-image/Image-2.svg"
+                        alt="imagem de Formatura"
+                      />
+                      <span>Formatura</span>
+                    </div>
+                  </label>
+
+                  <label>
+                    <input type="radio" name="theme" id="merry" />
+                    <div class="radio-inner">
+                      <img
+                        src="assets/theme-image/Image-3.svg"
+                        alt="imagem de casamento"
+                      />
+                      <span>Casamento</span>
+                    </div>
+                  </label>
+
+                  <label>
+                    <input type="radio" name="theme" id="baby-shower" />
+                    <div class="radio-inner">
+                      <img
+                        src="assets/theme-image/Image-4.svg"
+                        alt="imagem de chá de bebê"
+                      />
+                      <span>Chá de bebê</span>
+                    </div>
+                  </label>
+
+                  <label>
+                    <input type="radio" name="theme" id="pot-tea" />
+                    <div class="radio-inner">
+                      <img
+                        src="assets/theme-image/Image-5.svg"
+                        alt="imagem de chá de panela"
+                      />
+                      <span>Chá de panela</span>
+                    </div>
+                  </label>
+
+                  <label>
+                    <input type="radio" name="theme" id="Carnival" />
+                    <div class="radio-inner">
+                      <img
+                        src="assets/theme-image/Image-6.svg"
+                        alt="imagem de carnaval"
+                      />
+                      <span>Carnaval</span>
+                    </div>
+                  </label>
+
+                  <label>
+                    <input type="radio" name="theme" id="Easter" />
+                    <div class="radio-inner">
+                      <img
+                        src="assets/theme-image/Image-7.svg"
+                        alt="imagem de páscoa"
+                      />
+                      <span>Páscoa</span>
+                    </div>
+                  </label>
+
+                  <label>
+                    <input type="radio" name="theme" id="sao-joao" />
+                    <div class="radio-inner">
+                      <img
+                        src="assets/theme-image/Image-8.svg"
+                        alt="imagem de halloween"
+                      />
+                      <span>São João</span>
+                    </div>
+                  </label>
+
+                  <label>
+                    <input type="radio" name="theme" id="halloween" />
+                    <div class="radio-inner">
+                      <img
+                        src="assets/theme-image/Image-9.svg"
+                        alt="imagem de São João"
+                      />
+                      <span>halloween</span>
+                    </div>
+                  </label>
+
+                  <label>
+                    <input type="radio" name="theme" id="christmas" />
+                    <div class="radio-inner">
+                      <img
+                        src="assets/theme-image/Image-10.svg"
+                        alt="imagem de Christmas"
+                      />
+                      <span>Natal</span>
+                    </div>
+                  </label>
+
+                  <label>
+                    <input type="radio" name="theme" id="other" />
+                    <div class="radio-inner">
+                      <img
+                        src="assets/theme-image/Image-11.svg"
+                        alt="imagem de outro"
+                      />
+                      <span>Outro</span>
+                    </div>
+                  </label>
+                </div>
+              </div>
+
+              <div class="input-wrapper">
+                <label for="style">Estilo</label>
+                <div>
+                  <label class="toggle-switch">
+                    <input id="check" type="checkbox" />
+                    <span class="slider"></span>
+                  </label>
+                </div>
+              </div>
+            </fieldset>
           </form>
         </div>
       </main>
