--- a/index.html
+++ b/index.html
@@ -104,12 +104,14 @@
               <div class="textarea-wrapper">
                 <label for="description">Descrição</label>
                 <textarea
+                class="textarea"
                   name="description"
                   id="description"
                   cols="30"
                   rows="10"
                   placeholder="Escreva sobre os detalhes do evento"
                 ></textarea>
+                
               </div>
             </fieldset>
 
@@ -175,7 +177,7 @@
             </div>
 
             <fieldset class="enroll-options">
-              <div class="input-wrapper">
+              <div class="input-wrapper ">
                 <label for="theme">Tema do evento</label>
 
                 <div class="radio-container">
@@ -313,16 +315,105 @@
                 </div>
               </div>
 
-              <div class="input-wrapper">
-                <label for="style">Estilo</label>
-                <div>
-                  <label class="toggle-switch">
-                    <input id="check" type="checkbox" />
-                    <span class="slider"></span>
-                  </label>
+              <div class="input-grid drop">
+                <div class="input-wrapper">
+                  <label for="style">Estilo</label>
+                  <div class="display-flex">
+                    <label class="toggle-switch">
+                      <input id="check" type="checkbox" />
+                      <span class="slider"></span>
+                    </label>
+                    <span>Escuro</span>
+                  </div>
+                </div>
+
+                <div class="droparea-wrapper">
+                  <label for="file">Foto de capa</label>
+                  <div class="display-flex">
+                    <div class="dropzone">
+                      <img
+                        src="assets/icons/upload-blue.svg"
+                        alt="imagem de upload"
+                      />
+                      <span>Selecionar</span>
+                      <input type="file" id="file" name="file" />
+                    </div>
+                    <span>Nenhum arquivo selecionado</span>
+                  </div>
                 </div>
               </div>
             </fieldset>
+
+            <div class="custom-container">
+              <div class="about">
+                <img src="assets/icons/calendar.svg" alt="imagem de calendário">
+                <h2>Dados para contato</h2>
+              </div>
+            </div>
+
+              <fieldset id="about-event">
+                <div class="input-wrapper">
+                  <label for="person-name">Nome</label>
+                  <input
+                    type="text"
+                    id="person-name"
+                    name="person-name"
+                    placeholder="Nome completo"
+                    required
+                  />
+                  <div class="error">
+                    <img src="assets/icons/circle-alert-red.svg" alt="icone de alerta">
+                    <span>Campo obrigatório</span>
+                  </div>
+                </div>
+  
+                <div class="input-grid">
+                  <div class="input-wrapper">
+                    <label for="email">E-mail</label>
+                    <input
+                      type="mail"
+                      id="email"
+                      name="email"
+                      placeholder="exemplo@email.com"
+                    />
+                  </div>
+  
+                  <div class="input-wrapper">
+                    <label for="fone">Telefone</label>
+                    <input
+                      type="tel"
+                      id="fone"
+                      name="fone"
+                      placeholder="(99)99999-9999"
+                    />
+                  </div>
+                </div>
+            </fieldset>
+
+            <hr>
+
+            <div class="terms-wrapper input-wrapper checkbox-wrapper">
+              <div class="checkbox-image"></div>
+              <input type="checkbox" id="terms" name="terms" required />
+              <label for="terms">Li e concordo com os <a href="#">Termos e Condições</a> e com a <a href="#">Política de Privacidade</a></label>
+            </div>
+
+            <div class="terms-wrapper input-wrapper checkbox-wrapper">
+              <div class="checkbox-image"></div>
+              <input type="checkbox" id="terms" name="terms"/>
+              <label for="terms">Aceito receber atualizações e promoções por e-mail</label>
+            </div>
+
+            <div class="terms-wrapper input-wrapper checkbox-wrapper">
+              <div class="checkbox-image"></div>
+              <input type="checkbox" id="terms" name="terms"/>
+              <label for="terms">Aceito receber atualizações e promoções por SMS</label>
+            </div>
+
+            <div class="action-wrapper">
+              <button type="submit" class="bnt">Gerar convite</button>
+            </div>
+            
           </form>
         </div>
       </main>
